--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,5 +2,4 @@ version: 0.2
 phases:
   build:
     commands:
-      - echo hello
-      - aws help
+      - aws synthetics start-canary --name create-ct-lz
