EnableGuardDutyInMaster currently not idempotent, so skip to next step

--- a/components/01-guardduty.yaml
+++ b/components/01-guardduty.yaml
@@ -75,7 +75,7 @@ Resources:
             action: aws:branch
             inputs:
               Choices:
-                - NextStep: EnableGuardDutyInMaster
+                - NextStep: EnableGuardDutyExistingAccounts
                   Variable: '{{ CheckIfOrganizationAdminAccountIsAlReadyRegistered.AdminAccountId }}'
                   StringEquals: !Ref AuditAWSAccountId
               Default: EnableOrganizationAdminAccount
