--- a/bootstrap/pipeline.yaml
+++ b/bootstrap/pipeline.yaml
@@ -66,7 +66,7 @@ Resources:
                 Branch: !Ref BranchName
                 OAuthToken: '{{resolve:secretsmanager:/founopticum/github-token:SecretString}}'
                 PollForSourceChanges: false
-        - Name: SetupControlTower
+        - Name: PrepareForControlTower
           Actions:
             - ActionTypeId:
                 Category: Build
@@ -152,8 +152,9 @@ Resources:
           phases:
             build:
               commands:
-                - aws synthetics start-canary --name ${SetupControlTowerCanary}
-
+                # automate https://docs.aws.amazon.com/controltower/latest/userguide/known-issues-decommissioning.html
+                - aws sso iam detach-role-policy --role-name AWSControlTowerAdmin --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerAdminPolicy || true
+                - aws iam delete-role --role-name AWSControlTower || true
 
   BuildProjectRole:
     Type: AWS::IAM::Role
@@ -189,120 +190,6 @@ Resources:
                 Resource:
                   - !Sub ${ArtifactStoreS3Location.Arn}
                   - !Sub ${ArtifactStoreS3Location.Arn}/*
-              - Action:
-                  - synthetics:StartCanary
-                Effect: Allow
-                Resource:
-                  - !Sub arn:${AWS::Partition}:synthetics:${AWS::Region}:${AWS::AccountId}:canary:${SetupControlTowerCanary}
-  SetupControlTowerCanaryRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      Policies:
-        - PolicyName: AllowS3List
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - s3:ListAllMyBuckets
-                  - s3:GetBucketLocation
-                  - cloudwatch:PutMetricData
-                Resource: '*'
-
-  SetupControlTowerCanary:
-    Type: AWS::Synthetics::Canary
-    Properties:
-      Name: fnptcm-bootstrap-ct
-      ArtifactS3Location: !Sub s3://${SetupControlTowerArtifactLocation}
-      ExecutionRoleArn: !GetAtt SetupControlTowerCanaryRole.Arn
-      RuntimeVersion: syn-1.0
-      StartCanaryAfterCreation: true
-      RunConfig:
-        TimeoutInSeconds: 600
-      Schedule:
-        DurationInSeconds: 3600
-        Expression: rate(0 minute)
-      Code:
-        Handler: pageLoadBlueprint.handler
-        Script: !Sub
-          - |
-            var synthetics = require('Synthetics');
-            const log = require('SyntheticsLogger');
-
-            const flowBuilderBlueprint = async function () {
-              // INSERT URL here
-              let url = "https://${AwsAccountId}.signin.aws.amazon.com/console";
-
-              let page = await synthetics.getPage();
-
-              // Navigate to the initial url
-              await synthetics.executeStep('navigateToUrl', async function (timeoutInMillis = 30000) {
-                await page.goto(url, {waitUntil: ['load', 'networkidle0'], timeout: timeoutInMillis});
-              });
-
-              // Execute customer steps
-              await synthetics.executeStep('customerActions', async function () {
-                await page.type("[id='username']", "${IamUserName}");
-                await page.type("[id='password']", "${IamPassword}");
-
-                await page.click("[id='signin_button']");
-                await page.waitForNavigation({waitUntil: ['domcontentloaded']});
-              });
-
-
-              await synthetics.executeStep('gotoCT', async function () {
-                await page.goto("https://eu-west-1.console.aws.amazon.com/controltower/home?region=eu-west-1", {waitUntil: ['load', 'networkidle0']});
-              });
-
-              await synthetics.executeStep('create landing zone', async function () {
-                await page.click("#get-started-btn > button");
-                await page.waitFor(10000); // waitForNavigation does not work here, so use sleep()
-                await page.click("#awsui-input-0")
-                await page.click("#awsui-input-1")
-                await page.click("#awsui-input-2")
-                await page.type("#awsui-input-0", "founopticum-aws-test+log-archive@superluminar.io")
-                await page.type("#awsui-input-1", "founopticum-aws-test+audit@superluminar.io")
-                await page.click("#awsui-checkbox-0")
-                await page.waitFor(10000); // wait for AWS UI to settle, then click
-                await page.click("#save-button > button");
-                await page.waitForNavigation({waitUntil: ['domcontentloaded']});
-              });
-
-            };
-
-            exports.handler = async () => {
-              return await flowBuilderBlueprint();
-            };
-
-          - AwsAccountId: '{{resolve:secretsmanager:/founopticum/iam:SecretString:awsaccountid}}'
-            IamUserName: '{{resolve:secretsmanager:/founopticum/iam:SecretString:username}}'
-            IamPassword: '{{resolve:secretsmanager:/founopticum/iam:SecretString:password}}'
-
-  SetupControlTowerArtifactLocation:
-    Type: AWS::S3::Bucket
-
-  ArtifactLocationPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket: !Ref SetupControlTowerArtifactLocation
-      PolicyDocument:
-        Statement:
-          - Effect: Allow
-            Action: '*'
-            Resource:
-              - !GetAtt SetupControlTowerArtifactLocation.Arn
-              - !Sub ${SetupControlTowerArtifactLocation.Arn}/*
-            Principal:
-              AWS: !GetAtt SetupControlTowerCanaryRole.Arn
 
   WaitStateMachine:
     Type: AWS::Serverless::StateMachine
