--- a/bootstrap/pipeline.yaml
+++ b/bootstrap/pipeline.yaml
@@ -149,18 +149,43 @@ Resources:
         Type: CODEPIPELINE
         BuildSpec: !Sub |
           version: 0.2
+          env:
+            parameter-store:
+              ou_core: /founopticum/ou_core
+              ou_custom: /founopticum/ou_custom
+              ou_graveyard: /founopticum_bootstrap/ou_graveyard
+              account_id_logarchive: /founopticum/account_id_logarchive
+              account_id_audit: /founopticum/account_id_audit
           phases:
             build:
               commands:
                 # automate https://docs.aws.amazon.com/controltower/latest/userguide/known-issues-decommissioning.html
                 - aws iam detach-role-policy --role-name AWSControlTowerAdmin --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerAdminPolicy || true
+                - aws iam delete-policy --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerAdminPolicy || true
                 - aws iam delete-role --role-name AWSControlTower || true
                 - aws iam detach-role-policy --role-name AWSControlTowerCloudTrailRole --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerCloudTrailRolePolicy || true
+                - aws iam delete-policy --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerCloudTrailRolePolicy || true
                 - aws iam delete-role --role-name AWSControlTowerCloudTrailRole || true
                 - aws iam detach-role-policy --role-name AWSControlTowerStackSetRole --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerStackSetRolePolicy || true
+                - aws iam delete-policy --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerStackSetRolePolicy || true
                 - aws iam delete-role --role-name AWSControlTowerStackSetRole || true
 
-                -
+                - aws organizations move-account --account-id $account_id_logarchive --source-parent-id $ou_core --destination-parent-id $ou_graveyard || true
+                - aws organizations move-account --account-id $account_id_audit --source-parent-id $ou_core --destination-parent-id $ou_graveyard || true
+                - aws organizations delete-organizational-unit --organizational-unit-id $ou_core || true
+                - aws organizations delete-organizational-unit --organizational-unit-id $ou_custom || true
+
+                - aws logs delete-log-group --log-group-name aws-controltower/CloudTrailLogs || true
+
+#                - aws configure --profile logarchive set role_arn arn:aws:iam::${!account_id_logarchive}:role/OrganizationAccountAccessRole
+#                - aws configure --profile logarchive set credential_source EcsContainer
+#                - aws --profile logarchive s3 rm s3://aws-controltower-logs-${AWS::AccountId}-${AWS::Region} --recursive
+#                - aws --profile logarchive s3 rb s3://aws-controltower-logs-${AWS::AccountId}-${AWS::Region}
+#                - aws --profile logarchive s3 rm s3://aws-controltower-s3-access-logs-${AWS::AccountId}-${AWS::Region} --recursive
+#                - aws --profile logarchive s3 rb s3://aws-controltower-s3-access-logs-${AWS::AccountId}-${AWS::Region}
+
+
+
 
   BuildProjectRole:
     Type: AWS::IAM::Role
