--- a/bootstrap/pipeline.yaml
+++ b/bootstrap/pipeline.yaml
@@ -162,7 +162,7 @@ Resources:
                 # automate https://docs.aws.amazon.com/controltower/latest/userguide/known-issues-decommissioning.html
                 - aws iam detach-role-policy --role-name AWSControlTowerAdmin --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerAdminPolicy || true
                 - aws iam delete-policy --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerAdminPolicy || true
-                - aws iam delete-role --role-name AWSControlTower || true
+                - aws iam delete-role --role-name AWSControlTowerAdmin || true
                 - aws iam detach-role-policy --role-name AWSControlTowerCloudTrailRole --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerCloudTrailRolePolicy || true
                 - aws iam delete-policy --policy-arn arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSControlTowerCloudTrailRolePolicy || true
                 - aws iam delete-role --role-name AWSControlTowerCloudTrailRole || true
